maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:10: error: not found: value keepHandOnSideWall
      keepHandOnSideWall()
      ^