maze.island.IslandMaze.scala.code
override def run() {
  setDirection(Direction.NORTH)
  while(!estSurBiscuit()){
    while(!estFaceMur()){
      avance()
    }
    while(estFaceMur()){
      droite()
      keepHandOnSideWall()
      setDirection(Direction.NORTH)
    }
  }
}